# notes_cli

./: README.md  pyproject.toml
notes/: __init__.py  crud.py  notes.py
