[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Jordan Burke <jordan.burke@dataiku.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.7"
file = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notes = "notes:cli"
